# crewai_automated_project_estimation

./: README.md  pyproject.toml  resource_allocation.md
src/crewai_automated_project_estimation/: crew.py  main.py
src/crewai_automated_project_estimation/config/: tasks.yaml
src/crewai_automated_project_estimation/outputs/: output_model.py
